Update README.md
update documentation for https://github.com/TestFX/TestFX/issues/638